add swagger docs

--- a/core/.env.example
+++ b/core/.env.example
@@ -3,3 +3,7 @@ DB_PORT=5433
 DB_USER=postgres
 DB_PASSWORD=pass
 DB_NAME=db
+
+# JWT Configuration
+JWT_SECRET=your-super-secret-jwt-key-change-this-in-production
+JWT_ACCESS_TOKEN_EXPIRATION=3600
