setup test docker, e2e tests with supertest and jest

--- a/core/tsconfig.json
+++ b/core/tsconfig.json
@@ -24,8 +24,9 @@
     "typeRoots": [
       "./node_modules/@types",
       "./src/types"
-    ]
+    ],
+    "types": ["jest", "node"]
   },
-  "include": ["src/**/*"],
+  "include": ["src/**/*", "test/**/*"],
   "exclude": ["node_modules", "dist"]
 }
