--- a/core/package.json
+++ b/core/package.json
@@ -18,6 +18,10 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
+    "test:db:start": "docker-compose -f ../docker-compose.test.yml up -d",
+    "test:db:stop": "docker-compose -f ../docker-compose.test.yml down",
+    "test:db:logs": "docker-compose -f ../docker-compose.test.yml logs -f",
+    "test:e2e:full": "npm run test:db:start && npm run test:e2e && npm run test:db:stop",
     "typeorm": "typeorm-ts-node-commonjs -d src/data-source.ts"
   },
   "dependencies": {
